--- a/CinemaOnline/Views/Shared/_Layout.cshtml
+++ b/CinemaOnline/Views/Shared/_Layout.cshtml
@@ -28,11 +28,16 @@
     <!-- Select -->
     <link href="/Content/css/external/jquery.selectbox.css" rel="stylesheet" />
 
+
+
     <!-- REVOLUTION BANNER CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="/Content/plugin/css/settings.css" media="screen" />
 
     <!-- Custom -->
+    <!-- Custom -->
     <link href="/Content/css/style3860.css?v=1" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Content/css/footer.css" />
+    <link rel="stylesheet" href="~/Content/css/header.css" />
 
     <!-- Modernizr -->
     <script src="~/Scripts/js/external/modernizr.custom.js"></script>
@@ -61,7 +66,7 @@
 
 <body>
     <div class="wrapper">
-         
+
         <!-- Header -->
         @Html.Partial("_PartialHeader")
 
