--- a/CinemaOnline/Views/Shared/_PartialFooter.cshtml
+++ b/CinemaOnline/Views/Shared/_PartialFooter.cshtml
@@ -1,45 +1,52 @@
 ﻿<footer class="footer-wrapper">
     <section class="container">
-        <div class="col-xs-4 col-md-2 footer-nav">
-            <ul class="nav-link">
-                <li><a href="#" class="nav-link__item">Cities</a></li>
-                <li><a href="movie-list-left.html" class="nav-link__item">Movies</a></li>
-                <li><a href="trailer.html" class="nav-link__item">Trailers</a></li>
-                <li><a href="rates-left.html" class="nav-link__item">Rates</a></li>
-            </ul>
-        </div>
-        <div class="col-xs-4 col-md-2 footer-nav">
-            <ul class="nav-link">
-                <li><a href="coming-soon.html" class="nav-link__item">Coming soon</a></li>
-                <li><a href="cinema-list.html" class="nav-link__item">Cinemas</a></li>
-                <li><a href="offers.html" class="nav-link__item">Best offers</a></li>
-                <li><a href="news-left.html" class="nav-link__item">News</a></li>
-            </ul>
-        </div>
-        <div class="col-xs-4 col-md-2 footer-nav">
-            <ul class="nav-link">
-                <li><a href="#" class="nav-link__item">Terms of use</a></li>
-                <li><a href="gallery-four.html" class="nav-link__item">Gallery</a></li>
-                <li><a href="contact.html" class="nav-link__item">Contacts</a></li>
-                <li><a href="page-elements.html" class="nav-link__item">Shortcodes</a></li>
-            </ul>
-        </div>
-        <div class="col-xs-12 col-md-6">
-            <div class="footer-info">
-                <p class="heading-special--small">A.Movie<br><span class="title-edition">in the social media</span></p>
-
-                <div class="social">
-                    <a href='#' class="social__variant fa fa-facebook"></a>
-                    <a href='#' class="social__variant fa fa-twitter"></a>
-                    <a href='#' class="social__variant fa fa-vk"></a>
-                    <a href='#' class="social__variant fa fa-instagram"></a>
-                    <a href='#' class="social__variant fa fa-tumblr"></a>
-                    <a href='#' class="social__variant fa fa-pinterest"></a>
-                </div>
-
-                <div class="clearfix"></div>
-                <p class="copy">&copy; A.Movie, @DateTime.Now.Year. All rights reserved. Done by zFrames</p>
+        <div class="footer-nav-container">
+            <!-- Navigation Links -->
+            <div class="footer-nav">
+                <h5 class="footer-nav__title">Quick Links</h5>
+                <ul class="nav-link">
+                    <li><a href="#" class="nav-link__item">Cities</a></li>
+                    <li><a href="movie-list-left.html" class="nav-link__item">Movies</a></li>
+                    <li><a href="trailer.html" class="nav-link__item">Trailers</a></li>
+                    <li><a href="rates-left.html" class="nav-link__item">Rates</a></li>
+                </ul>
             </div>
+
+            <div class="footer-nav">
+                <h5 class="footer-nav__title">Explore</h5>
+                <ul class="nav-link">
+                    <li><a href="coming-soon.html" class="nav-link__item">Coming Soon</a></li>
+                    <li><a href="cinema-list.html" class="nav-link__item">Cinemas</a></li>
+                    <li><a href="offers.html" class="nav-link__item">Best Offers</a></li>
+                    <li><a href="news-left.html" class="nav-link__item">News</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-nav">
+                <h5 class="footer-nav__title">Support</h5>
+                <ul class="nav-link">
+                    <li><a href="#" class="nav-link__item">Terms of Use</a></li>
+                    <li><a href="gallery-four.html" class="nav-link__item">Gallery</a></li>
+                    <li><a href="contact.html" class="nav-link__item">Contact</a></li>
+                    <li><a href="page-elements.html" class="nav-link__item">Shortcodes</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Social Media and Info -->
+        <div class="footer-info">
+            <h5 class="footer-info__title">Follow Us</h5>
+            <div class="social">
+                <a href="#" class="social__variant fa fa-facebook"></a>
+                <a href="#" class="social__variant fa fa-twitter"></a>
+                <a href="#" class="social__variant fa fa-instagram"></a>
+                <a href="#" class="social__variant fa fa-youtube"></a>
+                <a href="#" class="social__variant fa fa-linkedin"></a>
+            </div>
+
+            <p class="footer-info__copyright">
+                &copy; A.Movie, @DateTime.Now.Year. All rights reserved. Designed by MeetFlix Team.
+            </p>
         </div>
     </section>
 </footer>
