--- a/CinemaOnline/Views/Home/Index.cshtml
+++ b/CinemaOnline/Views/Home/Index.cshtml
@@ -9,142 +9,15 @@
 @Html.Partial("_PartialSlide")
 <!-- Main content -->
 <section class="container">
-    <div class="movie-best">
-        <div class="col-sm-10 col-sm-offset-1 movie-best__rating">Lựa chọn ngay</div>
-        <div class="col-sm-12 change--col">
-            @{
-                int index = 0;
-                bool hiden = false;
-                foreach (var bestChoice in bestChoices)
-                {
-                    <div class="movie-beta__item @(hiden?"hidden-xs hidden-sm":"")">
-                        <a href="/film/detail?id=@bestChoice.Id">
-                            <img alt='' src="@bestChoice.BannerUrl">
-                        </a>
-                        <span class="best-rate">5.0</span>
-
-                        <ul class="movie-beta__info">
-                            <li><span class="best-voted">71 people voted today</span></li>
-                            <li>
-                                <p class="movie__time">@bestChoice.Time</p>
-                                <p>
-                                    @{
-                                        if (bestChoice.FilmMovieTypes.Count > 0)
-                                        {
-                                            var last = bestChoice.FilmMovieTypes.Last();
-                                            foreach (var ftype in bestChoice.FilmMovieTypes)
-                                            {
-                                                if (ftype.Equals(last))
-                                                {
-                                                    @ftype
-                                                }
-                                                else
-                                                {
-                                                    @(ftype + " | ");
-                                                }
-
-                                            }
-                                        }
-
-                                    }
-                                </p>
-                                <p>38 comments</p>
-                            </li>
-                            <li class="last-block">
-                                <a href="/film/detail?id=@bestChoice.Id" class="slide__link">Xem thêm</a>
-                            </li>
-                        </ul>
-                    </div>
-                    index++;
-                    if (index >= 2)
-                    {
-                        hiden = true;
-                    }
-                }
-            }
-        </div>
-        <div class="col-sm-10 col-sm-offset-1 movie-best__check">check all movies now playing</div>
-    </div>
+    @Html.Partial("_BestChoices")
 
     @Html.Partial("_SearchForm")
 
     <div class="clearfix"></div>
 
     <h2 id='target' class="page-heading heading--outcontainer">Now in the cinema</h2>
-
-    <div class="col-sm-12">
-        <div class="row">
-            <div class="col-sm-8 col-md-9">
-                <!-- Movie variant with time -->
-                @{
-                    bool isLeft = true;
-                    int i = 0;
-                    foreach (var item in films)
-                    {
-
-                        <div class="col-md-6 movie movie--test @(isLeft?"movie--test--light movie--test--left":"movie--test--dark movie--test--right")">
-                            <div class="movie__images fix">
-                                <a href="/film/detail?id=@item.Id" class="movie-beta__link">
-                                    <img alt='@item.Name' src="@item.Image">
-                                </a>
-                            </div>
-                            <div class="movie__info">
-                                <a href='/film/detail?id=@item.Id' class="movie__title">@item.Name  </a>
-
-                                <p class="movie__time">@(item.Time != null ? item.Time.ToString() : "") min</p>
-
-                                <p class="movie__option">
-                                    @{
-                                        if (item.FilmMovieTypes.Count > 0)
-                                        {
-                                            var last = item.FilmMovieTypes.Last();
-                                            foreach (var ftype in item.FilmMovieTypes)
-                                            {
-                                                if (ftype.Equals(last))
-                                                {
-                                                    <a href="/Film/Search?category=@ftype"> @ftype</a>
-                                                }
-                                                else
-                                                {
-                                                    <a href="/Film/Search?category=@ftype">@(ftype + " | ")</a>
-                                                }
-                                            }
-                                        }
-                                    }
-                                </p>
-                                <div class="movie__rate">
-                                    <div class="score"></div>
-                                    <span class="movie__rating">4.1</span>
-                                </div>
-                            </div>
-                        </div>
-                        i++;
-                        if (i % 2 == 0)
-                        {
-
-                            isLeft = !isLeft;
-                        }
-                    }
-                }
-            </div>
-
-            <aside class="col-sm-4 col-md-3">
-                <div class="sitebar first-banner--left">
-                    <div class="banner-wrap first-banner--left">
-                        <img alt='banner' src="~/Content/images/banners/sale.jpg">
-                    </div>
-
-                    <div class="banner-wrap">
-                        <img alt='banner' src="~/Content/images/banners/sport.jpg">
-                    </div>
-
-                    <div class="banner-wrap banner-wrap--last">
-                        <img alt='banner' src="~/Content/images/banners/boots.jpg">
-                    </div>
-                </div>
-            </aside>
-        </div>
-    </div>
+    @Html.Partial("_MovieList")
+  
 
     @Html.Partial("_LatestNews")
 </section>
